<resources>
    <string name="app_name">Mapus</string>
    <string name="title_activity_main">Mapus</string>

    <string name="title_fragment_geoloc">Géolocalisation</string>
    <string name="title_fragment_anomalie">Signaler une anomalie</string>
    <string name="title_fragment_ru">Restaurants Universitaires</string>
    <string name="title_fragment_edt">Emploi du temps</string>
    <string name="title_fragment_qrcode">Scanner un QR Code</string>
    <string name="title_fragment_settings">Paramètres</string>
    <string name="header_qr_result">Menu du jour</string>
    <string name="title_fragment_informations">Informations</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="access_token">pk.eyJ1IjoiY2FydGVwaXBpIiwiYSI6ImNpenRzemk1MjAwMTUycXFzeHBodDZ0NXQifQ.3w5a-KYjVk8YHBoHVGmB2Q</string>
    <string name="hello_geoloc_fragment">Hello geoloc fragment</string>
    <string name="hello_infos_fragment">Hello informations fragment</string>


    <string name="button_go_back_qr">Scanner un nouveau QR code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="developpers_title">Équipe de développement</string>
    <string name="developpers_name_1">Thomas BILLE</string>
    <string name="developpers_name_2">Clément CHAUMEL</string>
    <string name="developpers_name_3">Valentin CHEVALIER</string>

    <string name="sensors_title">Capteurs</string>
    <string name="sensors_lumnisoty_label">Luminosité</string>
    <string name="sensors_sound_label">Son</string>
    <string name="back_calendar">Retour</string>
    <string name="ok_calendar">Valider</string>
    <string name="back_anomalie">Annuler</string>
    <string name="confirm_anomalie">Envoyer</string>
    <string name="fleche">→</string>


    <string name="anomalie_degree_1">Confort</string>
    <string name="anomalie_degree_2">Problème</string>
    <string name="anomalie_degree_3">Danger</string>
    <string name="anomalie_degree_description">Gravité de l\'anomalie :</string>
    <string name="ru1_label">RU 1</string>
    <string name="ru2_label">RU 2</string>
    <string name="ru_title">Fréquentation en temps réel</string>
    <string name="ru_graph_title">Taux de fréquentation moyen</string>
    <string name="edt_settings_title">Emploi du temps</string>
    <string name="edt_settings_formation_label">Formation</string>
    <string name="edt_settings_licence_label">Licence</string>
    <string name="edt_settings_master_label">Master</string>
    <string name="edt_settings_group_label">Groupe</string>
    <string name="licence_placeholder">Sélectionnez votre licence</string>
    <string name="master_placeholder">Sélectionnez votre master</string>
    <string name="groupe_placeholder">Sélectionnez votre groupe</string>
    <string name="refresh_edt_btn">Récupérer l\'emploi du temps</string>
</resources>
