<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context="com.m2dl.mapus.mapus.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edt_settings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/edt_settings_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/formation_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/edt_settings_formation_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/licence_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edt_settings_licence_label" />

        <Spinner
            android:id="@+id/edt_licence_formation_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/master_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edt_settings_master_label" />

        <Spinner
            android:id="@+id/edt_master_formation_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/group_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/edt_settings_group_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/edt_group_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/refresh_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refresh_edt_btn"
            android:visibility="invisible"/>

    </LinearLayout>

</FrameLayout>
